# ptz-controller

./: CMakeLists.txt  controller.cpp  controller.hpp  dockwidget.cpp  dockwidget.hpp  joystickwidget.cpp  joystickwidget.hpp  locale.h  module.c  presetwidget.cpp  presetwidget.hpp  settingsdialog.cpp  settingsdialog.hpp
data/locale/: en-US.ini
